// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FocusOverlay renders correctly when left is focused 1`] = `
<DocumentFragment>
  .cache-vkpuwe-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #8c40ef;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-vkpuwe-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-vkpuwe-StyledDiv etutiin0"
    data-focusposition="left"
    style="transform: translate3d(0px, 0, 0) scale3d(1, 1, 1); width: 400px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when left is focused and has mouse down 1`] = `
<DocumentFragment>
  .cache-vkpuwe-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #8c40ef;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-vkpuwe-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-vkpuwe-StyledDiv etutiin0"
    data-focusposition="left"
    style="transform: translate3d(0px, 0, 0) scale3d(1.015, 1, 1); width: 400px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when right is focused 1`] = `
<DocumentFragment>
  .cache-vkpuwe-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #8c40ef;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-vkpuwe-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-vkpuwe-StyledDiv etutiin0"
    data-focusposition="right"
    style="transform: translate3d(408px, 0, 0) scale3d(1, 1, 1); width: 200px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when right is focused and has mouse down 1`] = `
<DocumentFragment>
  .cache-vkpuwe-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #8c40ef;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-vkpuwe-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-vkpuwe-StyledDiv etutiin0"
    data-focusposition="right"
    style="transform: translate3d(408px, 0, 0) scale3d(1.03, 1, 1); width: 200px;"
  />
</DocumentFragment>
`;

exports[`SwitchButton renders correctly 1`] = `
<DocumentFragment>
  .cache-tib6m2-StyledBorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-fo7o17-Stack-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover,
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within,
.cache-fo7o17-Stack-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-checked='true'] label {
  color: #ffffff;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    style="display: inline-flex;"
  >
    <div
      class="cache-tib6m2-StyledBorderedBox e4ryteh1"
    >
      <div
        class="e4ryteh0 cache-fo7o17-Stack-Container-StyledSelectableCard e1s5n3hj2"
        data-checked="false"
        data-disabled="false"
        data-has-label="true"
        data-type="radio"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="e1s5n3hj3 cache-14syb4e-RadioContainer-StyledRadio-StyledElement ehkrmld2"
            data-checked="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              class="cache-1ghsgz8-RadioInput ehkrmld3"
              id="test-left"
              name="test"
              type="radio"
              value="left"
            />
            <svg
              class="cache-1dyk1l0-Ring ehkrmld4"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="cache-ivayk3-RadioMark ehkrmld5"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="cache-shj57p-StyledLabel ehkrmld1"
              for="test-left"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="e4ryteh0 cache-fo7o17-Stack-Container-StyledSelectableCard e1s5n3hj2"
        data-checked="true"
        data-disabled="false"
        data-has-label="true"
        data-type="radio"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="e1s5n3hj3 cache-14syb4e-RadioContainer-StyledRadio-StyledElement ehkrmld2"
            data-checked="true"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              checked=""
              class="cache-1ghsgz8-RadioInput ehkrmld3"
              id="test-right"
              name="test"
              type="radio"
              value="right"
            />
            <svg
              class="cache-1dyk1l0-Ring ehkrmld4"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="cache-ivayk3-RadioMark ehkrmld5"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="cache-shj57p-StyledLabel ehkrmld1"
              for="test-right"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with right value 1`] = `
<DocumentFragment>
  .cache-tib6m2-StyledBorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-fo7o17-Stack-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover,
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within,
.cache-fo7o17-Stack-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-checked='true'] label {
  color: #ffffff;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    style="display: inline-flex;"
  >
    <div
      class="cache-tib6m2-StyledBorderedBox e4ryteh1"
    >
      <div
        class="e4ryteh0 cache-fo7o17-Stack-Container-StyledSelectableCard e1s5n3hj2"
        data-checked="false"
        data-disabled="false"
        data-has-label="true"
        data-type="radio"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="e1s5n3hj3 cache-14syb4e-RadioContainer-StyledRadio-StyledElement ehkrmld2"
            data-checked="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              class="cache-1ghsgz8-RadioInput ehkrmld3"
              id="test-left"
              name="test"
              type="radio"
              value="left"
            />
            <svg
              class="cache-1dyk1l0-Ring ehkrmld4"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="cache-ivayk3-RadioMark ehkrmld5"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="cache-shj57p-StyledLabel ehkrmld1"
              for="test-left"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="e4ryteh0 cache-fo7o17-Stack-Container-StyledSelectableCard e1s5n3hj2"
        data-checked="true"
        data-disabled="false"
        data-has-label="true"
        data-type="radio"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="e1s5n3hj3 cache-14syb4e-RadioContainer-StyledRadio-StyledElement ehkrmld2"
            data-checked="true"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              checked=""
              class="cache-1ghsgz8-RadioInput ehkrmld3"
              id="test-right"
              name="test"
              type="radio"
              value="right"
            />
            <svg
              class="cache-1dyk1l0-Ring ehkrmld4"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="cache-ivayk3-RadioMark ehkrmld5"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="cache-shj57p-StyledLabel ehkrmld1"
              for="test-right"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders with tooltip 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-tib6m2-StyledBorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-has-label='false']>:first-child {
  margin-bottom: -4px;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-fo7o17-Stack-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover,
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within,
.cache-fo7o17-Stack-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-fo7o17-Stack-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard[data-checked='true'] label {
  color: #ffffff;
}

.cache-fo7o17-Stack-Container-StyledSelectableCard:not([data-checked='true']) label:hover {
  color: #641cb3;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='false'],
.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true']>label,
.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[data-checked='true'] {
  color: #641cb3;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-14syb4e-RadioContainer-StyledRadio-StyledElement input+svg {
  display: none;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    aria-controls=":re:"
    aria-describedby=":re:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="0"
  >
    <div
      style="display: inline-flex;"
    >
      <div
        class="cache-tib6m2-StyledBorderedBox e4ryteh1"
      >
        <div
          class="e4ryteh0 cache-fo7o17-Stack-Container-StyledSelectableCard e1s5n3hj2"
          data-checked="false"
          data-disabled="false"
          data-has-label="true"
          data-type="radio"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="e1s5n3hj3 cache-14syb4e-RadioContainer-StyledRadio-StyledElement ehkrmld2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="test-left"
                name="test"
                type="radio"
                value="left"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="test-left"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="e4ryteh0 cache-fo7o17-Stack-Container-StyledSelectableCard e1s5n3hj2"
          data-checked="true"
          data-disabled="false"
          data-has-label="true"
          data-type="radio"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="e1s5n3hj3 cache-14syb4e-RadioContainer-StyledRadio-StyledElement ehkrmld2"
              data-checked="true"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="test-right"
                name="test"
                type="radio"
                value="right"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="test-right"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
